# cpp_docker_template

./: CMakeLists.txt  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
src/: main.cpp  utils.cpp
tests/: test_main.cpp
